--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -8,13 +8,13 @@
     <Compile Include="..\CK.Cris.Tests\DiamondResultAndCommand.cs" Link="DiamondResultAndCommand.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--0535k9n-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--0537bps-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--0537rke-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--0538tqs-develop" />
     <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--052zkui-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <!-- We also test CK.Auth.Cris here. -->
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--0535kj7-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--0538tqq-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
