CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--0538tqq-develop
NuGet:CK.Auth.Abstractions/0.0.0--052zkui-develop
NuGet:CK.Auth.Abstractions/0.0.0--052zkui-develop
NuGet:CK.Testing.NUnit/0.0.0--052zkui-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--052zkuk-develop
NuGet:CK.Testing.StObjEngine/0.0.0--0537rke-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--0538tqq-develop
NuGet:CK.AppIdentity/0.0.0--052zkuk-develop
NuGet:CK.Poco.Exc.Json/0.0.0--0537rke-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Testing.StObjEngine/0.0.0--0537rke-develop
NuGet:CK.StObj.TypeScript/0.0.0--0539199-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Testing.StObjEngine/0.0.0--0537rke-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--0539199-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--0538tqq-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--0539199-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Testing.StObjEngine/0.0.0--0537rke-develop
NuGet:CK.CodeGen/0.0.0--052zkuj-develop
NuGet:CK.StObj.Runtime/0.0.0--0537rke-develop
NuGet:CK.PerfectEvent/0.0.0--052zkuj-develop
NuGet:CK.Globalization/0.0.0--052zkul-develop
NuGet:CK.StObj.Model/0.0.0--0537rke-develop
NuGet:CK.Auth.Abstractions/0.0.0--052zkui-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Testing.StObjEngine/0.0.0--0537rke-develop.

--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -20,7 +20,7 @@
         in AssemblyInfo.cs.
     -->
   <ItemGroup>
-    <PackageReference Include="CK.StObj.TypeScript" Version="0.0.0--0538tqs-develop" />
+    <PackageReference Include="CK.StObj.TypeScript" Version="0.0.0--0539199-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
