CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--053bu2a-develop
NuGet:CK.Auth.Abstractions/0.0.0--053bu1x-develop
NuGet:CK.Auth.Abstractions/0.0.0--053bu1x-develop
NuGet:CK.Testing.NUnit/0.0.0--053bu1w-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053bu21-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053bu2a-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--053bu1z-develop
NuGet:CK.AppIdentity/0.0.0--053bu1z-develop
NuGet:CK.Poco.Exc.Json/0.0.0--053bu21-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053bu21-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.StObj.TypeScript/0.0.0--053bu2c-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053bu21-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--053bu2c-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053bu2a-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--053bu2c-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053bu21-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop
NuGet:CK.CodeGen/0.0.0--053bu1x-develop
NuGet:CK.StObj.Runtime/0.0.0--053bu21-develop
NuGet:CK.PerfectEvent/0.0.0--053bu1y-develop
NuGet:CK.Globalization/0.0.0--053bu20-develop
NuGet:CK.StObj.Model/0.0.0--053bu21-develop
NuGet:CK.Auth.Abstractions/0.0.0--053bu1x-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053bu21-develop
NuGet:CK.Testing.Nunit/0.0.0--053bu1w-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--052zkuj-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--0537rke-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--053bu1x-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--053bu21-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
