--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--052zkul-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--0537rke-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053bu20-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--053bu21-develop" />
   </ItemGroup>
 </Project>
