--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,9 +4,9 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--053bu1x-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053bu21-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053bu1w-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--053bujb-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053bujc-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053bujb-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
