CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--053czx4-develop
NuGet:CK.Auth.Abstractions/0.0.0--053czwo-develop
NuGet:CK.Auth.Abstractions/0.0.0--053czwo-develop
NuGet:CK.Testing.NUnit/0.0.0--053czwo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053czws-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053czx4-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--053czwr-develop
NuGet:CK.AppIdentity/0.0.0--053czwr-develop
NuGet:CK.Poco.Exc.Json/0.0.0--053czws-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053czws-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.StObj.TypeScript/0.0.0--053czx6-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053czws-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--053czx6-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053czx4-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--053czx6-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053czws-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.CodeGen/0.0.0--053czwp-develop
NuGet:CK.StObj.Runtime/0.0.0--053czws-develop
NuGet:CK.PerfectEvent/0.0.0--053czwp-develop
NuGet:CK.Globalization/0.0.0--053czws-develop
NuGet:CK.StObj.Model/0.0.0--053czws-develop
NuGet:CK.Auth.Abstractions/0.0.0--053czwo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053czws-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop.

--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--053bujc-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--053bujc-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053czws-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--053czws-develop" />
   </ItemGroup>
 </Project>
