--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--053bujb-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--053bujc-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--053czwp-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--053czws-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
