--- a/Tests/CK.Cris.BackgroundExecutor.Tests/CK.Cris.BackgroundExecutor.Tests.csproj
+++ b/Tests/CK.Cris.BackgroundExecutor.Tests/CK.Cris.BackgroundExecutor.Tests.csproj
@@ -4,8 +4,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053bujc-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053bujb-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053czws-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053czwo-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
