--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.AppIdentity" Version="0.0.0--053czwr-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053czws-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053d558-develop" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
   </ItemGroup>
   <ItemGroup>
