--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--053czwo-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053czws-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053d558-develop" />
     <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053czwo-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
