--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -10,8 +10,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053czws-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053czx4-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053d558-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053d55h-develop" />
     <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--053czwr-develop" />
   </ItemGroup>
   <ItemGroup>
