CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--053d55h-develop
NuGet:CK.Auth.Abstractions/0.0.0--053czwo-develop
NuGet:CK.Auth.Abstractions/0.0.0--053czwo-develop
NuGet:CK.Testing.NUnit/0.0.0--053czwo-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--053czwr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053d558-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053d55h-develop
NuGet:CK.AppIdentity/0.0.0--053czwr-develop
NuGet:CK.Poco.Exc.Json/0.0.0--053d558-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053d558-develop
NuGet:CK.StObj.TypeScript/0.0.0--053eewu-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053d558-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--053eewu-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053d55h-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--053eewu-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053d558-develop
NuGet:CK.CodeGen/0.0.0--053d54o-develop
NuGet:CK.StObj.Runtime/0.0.0--053d558-develop
NuGet:CK.PerfectEvent/0.0.0--053czwp-develop
NuGet:CK.Globalization/0.0.0--053czws-develop
NuGet:CK.StObj.Model/0.0.0--053d558-develop
NuGet:CK.Auth.Abstractions/0.0.0--053czwo-develop
NuGet:CK.Testing.Nunit/0.0.0--053czwo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053d558-develop.

--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053d558-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--053d55j-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--053eewu-develop" />
     <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053czwo-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
