--- a/.editorconfig
+++ b/.editorconfig
@@ -7,9 +7,12 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 2
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
+tab_width = 4
+end_of_line = crlf
 
 
 [*.{cs,js,ts,sql,tql}]
@@ -29,7 +32,7 @@ csharp_style_prefer_primary_constructors = false:suggestion
 # internal and private fields should be _camelCase
 dotnet_naming_rule.camel_case_for_private_internal_fields.severity = suggestion
 dotnet_naming_rule.camel_case_for_private_internal_fields.symbols  = private_internal_fields
-dotnet_naming_rule.camel_case_for_private_internal_fields.style    = camel_case_underscore_style
+dotnet_naming_rule.camel_case_for_private_internal_fields.style = camel_case_underscore_style
 
 dotnet_naming_symbols.private_internal_fields.applicable_kinds = field
 dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
@@ -37,6 +40,27 @@ dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = priva
 dotnet_naming_style.camel_case_underscore_style.required_prefix = _
 dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
 # Motive: It follow the C# style guideline.
+
+csharp_indent_labels = no_change
+# When using goto, labels should be explicitly positioned based on the algorithm.
+
+csharp_using_directive_placement = outside_namespace:silent
+# Rather standard placement of using in C#.
+
+csharp_indent_case_contents_when_block = false;
+# switch case block don't need another indent.
+
+csharp_prefer_braces = true:silent
+
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_expression_bodied_methods = false:silent
+csharp_style_expression_bodied_constructors = false:silent
+csharp_style_expression_bodied_operators = false:silent
+csharp_style_expression_bodied_properties = true:silent
+csharp_style_expression_bodied_indexers = true:silent
+
+csharp_style_prefer_top_level_statements = true:suggestion
+# Applies to Main(). 
 
 csharp_style_namespace_declarations=file_scoped:suggestion
 #Motive: Less useless space.
@@ -117,6 +141,7 @@ dotnet_diagnostic.IDE0090.severity = none
 dotnet_diagnostic.VSTHRD101.severity = error
 # VSTHRD003: Avoid awaiting foreign Tasks
 dotnet_diagnostic.VSTHRD003.severity = none
+csharp_space_around_binary_operators = before_and_after
 
 
 # /Signature-Code .editorconfig
