--- a/.editorconfig
+++ b/.editorconfig
@@ -24,22 +24,11 @@ csharp_space_between_method_call_parameter_list_parentheses = true
 csharp_space_between_method_declaration_parameter_list_parentheses = true
 csharp_space_after_keywords_in_control_flow_statements = false
 csharp_space_between_parentheses = control_flow_statements
+csharp_space_around_binary_operators = before_and_after
 # Motive: May be weird at first, but it improves readability.
 
 csharp_style_prefer_primary_constructors = false:suggestion
 # Primary constructors should be used only for very simple classes. May be record is a good choice.
-
-# internal and private fields should be _camelCase
-dotnet_naming_rule.camel_case_for_private_internal_fields.severity = suggestion
-dotnet_naming_rule.camel_case_for_private_internal_fields.symbols  = private_internal_fields
-dotnet_naming_rule.camel_case_for_private_internal_fields.style = camel_case_underscore_style
-
-dotnet_naming_symbols.private_internal_fields.applicable_kinds = field
-dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
-
-dotnet_naming_style.camel_case_underscore_style.required_prefix = _
-dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
-# Motive: It follow the C# style guideline.
 
 csharp_indent_labels = no_change
 # When using goto, labels should be explicitly positioned based on the algorithm.
@@ -58,12 +47,26 @@ csharp_style_expression_bodied_constructors = false:silent
 csharp_style_expression_bodied_operators = false:silent
 csharp_style_expression_bodied_properties = true:silent
 csharp_style_expression_bodied_indexers = true:silent
+csharp_style_expression_bodied_accessors = true:silent
+csharp_style_expression_bodied_lambdas = true:silent
 
 csharp_style_prefer_top_level_statements = true:suggestion
 # Applies to Main(). 
 
 csharp_style_namespace_declarations=file_scoped:suggestion
 #Motive: Less useless space.
+
+# internal and private fields should be _camelCase
+dotnet_naming_rule.camel_case_for_private_internal_fields.severity = suggestion
+dotnet_naming_rule.camel_case_for_private_internal_fields.symbols  = private_internal_fields
+dotnet_naming_rule.camel_case_for_private_internal_fields.style = camel_case_underscore_style
+
+dotnet_naming_symbols.private_internal_fields.applicable_kinds = field
+dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
+
+dotnet_naming_style.camel_case_underscore_style.required_prefix = _
+dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
+# Motive: It follow the C# style guideline.
 
 # CA1063: Implement IDisposable Correctly
 dotnet_diagnostic.CA1063.severity = none
@@ -141,8 +144,6 @@ dotnet_diagnostic.IDE0090.severity = none
 dotnet_diagnostic.VSTHRD101.severity = error
 # VSTHRD003: Avoid awaiting foreign Tasks
 dotnet_diagnostic.VSTHRD003.severity = none
-csharp_space_around_binary_operators = before_and_after
-
 
 # /Signature-Code .editorconfig
 
