--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--053czwr-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053d558-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--053i1zc-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053i1ze-develop" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
   </ItemGroup>
   <ItemGroup>
