CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--053ij2v-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ij2b-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ij2b-develop
NuGet:CK.Testing.NUnit/0.0.0--053ij2b-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053ij2i-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053ij2v-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--053ij2f-develop
NuGet:CK.AppIdentity/0.0.0--053ij2f-develop
NuGet:CK.Poco.Exc.Json/0.0.0--053ij2i-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053ij2i-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.StObj.TypeScript/0.0.0--053ij2y-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053ij2i-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--053ij2y-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053ij2v-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--053ij2y-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053ij2i-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop
NuGet:CK.CodeGen/0.0.0--053ij2c-develop
NuGet:CK.StObj.Runtime/0.0.0--053ij2i-develop
NuGet:CK.PerfectEvent/0.0.0--053ij2d-develop
NuGet:CK.Globalization/0.0.0--053ij2g-develop
NuGet:CK.StObj.Model/0.0.0--053ij2i-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ij2b-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053ij2i-develop
NuGet:CK.Testing.Nunit/0.0.0--053ij2b-develop.

--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--053i1za-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--053ij2d-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
