--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--053i1z9-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--053i1ze-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--053ij2c-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--053ij2i-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
