--- a/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
+++ b/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
@@ -4,8 +4,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053i1ze-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053i1z8-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053ij2i-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053ij2b-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
