--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--053ij2f-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053ij2i-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--053iji0-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053iji0-develop" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
   </ItemGroup>
   <ItemGroup>
