CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--053imdk-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ijhz-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ijhz-develop
NuGet:CK.Testing.NUnit/0.0.0--053ijhr-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--053imdg-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053imdh-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053imdk-develop
NuGet:CK.AppIdentity/0.0.0--053imdg-develop
NuGet:CK.Poco.Exc.Json/0.0.0--053imdh-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053imdh-develop
NuGet:CK.StObj.TypeScript/0.0.0--053imdl-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053imdh-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--053imdl-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053imdk-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--053imdl-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053imdh-develop
NuGet:CK.CodeGen/0.0.0--053im5u-develop
NuGet:CK.StObj.Runtime/0.0.0--053imdh-develop
NuGet:CK.PerfectEvent/0.0.0--053ijhz-develop
NuGet:CK.Globalization/0.0.0--053iji0-develop
NuGet:CK.StObj.Model/0.0.0--053imdh-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ijhz-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053imdh-develop.

--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -10,9 +10,9 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053im6i-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053im6t-develop" />
-    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--053iji0-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053imdh-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053imdk-develop" />
+    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--053imdg-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
