--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.Globalization" Version="0.0.0--053iji0-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--053im6i-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--053imdh-develop" />
   </ItemGroup>
 </Project>
