--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -10,8 +10,8 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053imdh-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053imdk-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053is60-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053is6e-develop" />
     <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--053imdg-develop" />
   </ItemGroup>
   <ItemGroup>
