CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--053iz8t-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ijhz-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ijhz-develop
NuGet:CK.Testing.NUnit/0.0.0--053ijhr-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--053imdg-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053iz8c-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053iz8t-develop
NuGet:CK.AppIdentity/0.0.0--053imdg-develop
NuGet:CK.Poco.Exc.Json/0.0.0--053iz8c-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053iz8c-develop
NuGet:CK.StObj.TypeScript/0.0.0--053iz8u-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053iz8c-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--053iz8t-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--053iz8u-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--053iz8u-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053iz8c-develop
NuGet:CK.CodeGen/0.0.0--053im5u-develop
NuGet:CK.StObj.Runtime/0.0.0--053iz8c-develop
NuGet:CK.PerfectEvent/0.0.0--053ijhz-develop
NuGet:CK.Globalization/0.0.0--053inyv-develop
NuGet:CK.StObj.Model/0.0.0--053iz8c-develop
NuGet:CK.Auth.Abstractions/0.0.0--053ijhz-develop
NuGet:CK.Testing.Nunit/0.0.0--053ijhr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--053iz8c-develop.

--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -8,13 +8,13 @@
     <Compile Include="..\CK.Cris.Tests\DiamondResultAndCommand.cs" Link="DiamondResultAndCommand.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053isn2-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--053ivgb-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053iz8c-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--053iz8u-develop" />
     <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053ijhr-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <!-- We also test CK.Auth.Cris here. -->
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053ith8-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053iz8t-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
