Releasing 0.33.0-a. Upgrading release dependencies: NuGet:CK.AspNet.Auth/24.0.0-a, NuGet:CK.Auth.Abstractions/8.0.0-a, NuGet:CK.Auth.Abstractions/8.0.0-a, NuGet:CK.Testing.NUnit/11.0.0-a, NuGet:CK.Testing.StObjEngine/27.0.0-a, NuGet:CK.Testing.AspNetServer.Auth/24.0.0-a, NuGet:CK.AppIdentity.Hosting/0.6.0-a, NuGet:CK.AppIdentity/0.6.0-a, NuGet:CK.Poco.Exc.Json/27.0.0-a, NuGet:CK.Testing.StObjEngine/27.0.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.StObj.TypeScript/0.20.0-a, NuGet:CK.Testing.StObjEngine/27.0.0-a, NuGet:CK.Testing.StObjTypeScriptEngine/0.20.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.Testing.AspNetServer.Auth/24.0.0-a, NuGet:CK.StObj.TypeScript.Engine/0.20.0-a, NuGet:CK.Testing.StObjEngine/27.0.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.CodeGen/11.0.0-a, NuGet:CK.StObj.Runtime/27.0.0-a, NuGet:CK.PerfectEvent/23.0.0-a, NuGet:CK.Globalization/0.8.0-a, NuGet:CK.StObj.Model/27.0.0-a, NuGet:CK.Auth.Abstractions/8.0.0-a, NuGet:CK.Testing.StObjEngine/27.0.0-a, NuGet:CK.Testing.Nunit/11.0.0-a.

--- a/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
+++ b/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
@@ -4,7 +4,7 @@
     <Description>Implements IBasicLoginCommand, IRefreshAuthenticationCommand and ILogoutCommand using the WebFrontAuthService.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="0.0.0--053iz8t-develop" />
+    <PackageReference Include="CK.AspNet.Auth" Version="24.0.0-a" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
