--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--053imdg-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--053iz8c-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.6.0-a" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="27.0.0-a" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
   </ItemGroup>
   <ItemGroup>
