--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -8,13 +8,13 @@
     <Compile Include="..\CK.Cris.Tests\DiamondResultAndCommand.cs" Link="DiamondResultAndCommand.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053iz8c-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--053iz8u-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053ijhr-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="27.0.0-a" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.20.0-a" />
+    <PackageReference Include="CK.Testing.Nunit" Version="11.0.0-a" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <!-- We also test CK.Auth.Cris here. -->
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--053iz8t-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="24.0.0-a" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
