--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,9 +4,9 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--053ijhz-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--053iz8c-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--053ijhr-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="8.0.0-a" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="27.0.0-a" />
+    <PackageReference Include="CK.Testing.Nunit" Version="11.0.0-a" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
