--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.8.0" />
-    <PackageReference Include="CK.StObj.Model" Version="27.0.0" />
+    <PackageReference Include="CK.Globalization" Version="0.8.1--0001-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="27.0.1--0001-develop" />
   </ItemGroup>
 </Project>
